--- a/NavShieldTracer/ConsoleApp/Components/MonitorTab.razor
+++ b/NavShieldTracer/ConsoleApp/Components/MonitorTab.razor
@@ -307,6 +307,7 @@
     private static string ResolveThreatText(HeuristicThreatSeverityTarja level) => level switch
     {
         HeuristicThreatSeverityTarja.Verde => "VERDE",
+        HeuristicThreatSeverityTarja.Azul => "AZUL",
         HeuristicThreatSeverityTarja.Amarelo => "AMARELA",
         HeuristicThreatSeverityTarja.Laranja => "LARANJA",
         HeuristicThreatSeverityTarja.Vermelho => "VERMELHA",
@@ -316,6 +317,7 @@
     private static Color ResolveThreatColor(HeuristicThreatSeverityTarja level) => level switch
     {
         HeuristicThreatSeverityTarja.Verde => Color.Green,
+        HeuristicThreatSeverityTarja.Azul => Color.Blue,
         HeuristicThreatSeverityTarja.Amarelo => Color.Yellow,
         HeuristicThreatSeverityTarja.Laranja => Color.Orange3,
         HeuristicThreatSeverityTarja.Vermelho => Color.Red,
